src/main/java/com/example/error/BookNotFoundException.java
package com.example.error;

public class BookNotFoundException extends RuntimeException{
}
